--- a/index.html
+++ b/index.html
@@ -348,22 +348,22 @@ Tea Name,Benefits/Description,OZ,PRICE,QUANTITY,TOTAL,,MARKUP,0.2
 Cinnamon Apricot Tisane,"aid digestion, reduce inflammation, and help regulate blood sugar levels",4 oz,8.5,1,8.5,,SALES TAX,0.06
 Apple Cinnamon Tisane,"improved heart health, blood sugar regulation, and digestion,",4 oz,8.5,,0,,,
 Ashwagandha,"‘rejuvinates the body, promotes clarity",4 oz,8,,0,,,
-Beet root,"Lowers blood pressure, increases energy",2 oz,5,,0, ,,
-Black tea,delicious..reduces risk of heart disease,3 oz,4,,0,,,
+Beet Root,"Lowers blood pressure, increases energy",2 oz,5,,0, ,,
+Black Tea,delicious..reduces risk of heart disease,3 oz,4,,0,,,
 Bladderwrack,"Ediable seaweed. Can make teas, use in food instead of salt - or bath & skin products",3 oz,5,,0,,,
 Burdock ,"Blood purifier, diuretic, fights cancer, reduces inflammation",4 oz,6.5,,0,,,
 Catnip,"improves sleep, relaxation, & anxiety, Has a calming effect. Helps the stomach",1 oz ,3,,0,,,
 Chai Tea,"helps with digestion, boost immune system, helps with heart health,inflammation",4 oz,5,,0,,,
 Chamomile,"anti inflammatory, aids in sleep, cold fighter, kills certain cancer cells",1 oz,4,,0,,,
 Crimson Berry,"supporting heart health, boosting the immune system, and  aiding in weight mgmt.",3 oz,5,,0,,,
-Cranberry orange,"support immune health,  digestion, and potentially help with urinary tract infections",4 oz,8.5,,0,,,
-Cleanse & clear,"contains: burdock, dandelion, marshmallow, ginger, licorice,",2 oz,7.5,,0,,,
+Cranberry Orange,"support immune health,  digestion, and potentially help with urinary tract infections",4 oz,8.5,,0,,,
+Cleanse & Clear,"contains: burdock, dandelion, marshmallow, ginger, licorice,",2 oz,7.5,,0,,,
 Cold & Flu Brew,"energizes the body, comforts the senses",3 oz,5,,0,,,
-Dandelion root ,"diuretic that detoxes the liver, boosts the immune system, balances",4 oz,6.5,,0,,,
-Elder flower,"anti inflammatory, boosts immune system, diuretic, aids in helping with",1 oz,3,,0,,,
+Dandelion Root ,"diuretic that detoxes the liver, boosts the immune system, balances",4 oz,6.5,,0,,,
+Elder Leaf,"anti inflammatory, boosts immune system, diuretic, aids in helping with",1 oz,3,,0,,,
 Ginger Peach," digestion, reduce inflammation, and boost immunity",3 oz,3.5,1,3.5,,,
 Green Tea,"improves blood flow, lowers blood",2 oz,3,,0,,,
-Hawthome,Boosts immune system,2 oz,4,,0,,,
+Hawthorne,Boosts immune system,2 oz,4,,0,,,
 Hibiscus,"( regular, mint or zest) lowers",1.5 oz,4,,0,,,
 Jasmine," full of antioxidants, reduces cal",2 oz,5,,0,,,
 Lavender:,"relieves insomnia, indigestion, convulsi",1.5 oz,5,1,5,,,
@@ -371,7 +371,7 @@ Hibiscus Tea,"blood pressure, reduce cholesterol levels, and potentially aid in 
 Hibiscus Zest," heart health, weight management, promoting liver health, and blood & blood sugar levels.",2 oz,5,,0,,,
 Hibiscus Mint Tea," digestion, potentially reduce stress, and provide a natural boost to the immune system",2 oz,5.5,,0,,,
 Jasmine,"Antioxidant, improve digestion, Blood Pressure, Heart Health",3 oz,5,,0,,,
-Lemon grass," helps digestion, blood pressure bots Ae ad zt Le",1 oz,3,,0,,,
+Lemon Grass," helps digestion, blood pressure bots Ae ad zt Le",1 oz,3,,0,,,
 Licorice Root,"Strengthens body, use as detox",2 oz ,4,,0,,,
 Mullein Leaf,"helps asthma, copd, recurring congestion, smokers cough",1 oz,5,,0,,,
 Organic Jasmine,"Antioxidant, improve digestion, Blood Pressure, Heart Health",2 oz,5,,0,,,
@@ -383,7 +383,7 @@ Peppermint leaf: ,"helps with digestive issues, soothes stomach mi",1 oz,4,,0,,,
 Tropical Fruit Tea,"immune system, aid in weight management, and support heart health",3 oz,5,,0,,,
 Triple Berry Tea," antioxidants,  blood sugar and insulin response,  anti-inflammatory and anti-aging effects",2 oz,4,,0,,,
 Winter Blend Tea,"warmth, comfort, and supporting overall well-being ",3 oz,5,,0,,,
-spearmint Leaf,Has antimicrobial,1 oz,4,,0,,,
+Spearmint Leaf,Has antimicrobial,1 oz,4,,0,,,
 Yerba Mate,full of antioxidants,2 oz,5,,0,,,
 ,,,,TOTAL QUANTITY,True,,,
 ,,,,MARKUP,3.4000000000000004,,,
@@ -442,22 +442,25 @@ Contact Number,,,,,,,,
             "Cinnamon Apricot Tisane": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/cinnamon_apricot_tea_1_1.jpg?raw=true",
             "Apple Cinnamon Tisane": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Apple%20Cinnamon%20Tisane.jpg?raw=true",
             "Ashwagandha": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ashwagandha.jpg?raw=true",
-            "Beet root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Beet%20Root.jpg?raw=true",
-            "Black tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Black%20tea.png?raw=true",
-             "Bladderwrack": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Bladderwrack.jpg",
-              "Camomile": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Chamomile.jpg",
-              "Cleanse & Flu": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Cleanse%20%26%20clear.jpg",
-              "Ctanberry Orange": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Cranberry%20orange.jpg",
-              "Crimson Berry": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Crimson%20Berry.jpg",
-              "Dandelion Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Dandelion%20root.jpg",
-              "Elder Flower": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Elder%20flower.jpg",
-              "Ginger Peach": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Peach.jpg",
-              "Green Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Green%20Tea.jpg",
-              "Hawthorne": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hawthome.jpg",
-              "Hibiscus": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus.jpg?raw=true",
-              "Lavender": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Lavender.jpg",
-              "Hibiscus Zest": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Catnip.jpg",
-              "Catnip": "",
+            "Beet Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Beet%20Root.jpg?raw=true",
+            "Black Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Black%20tea.png?raw=true",
+            "Bladderwrack": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Bladderwrack.jpg?raw=true",
+            "Chamomile": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Chamomile.jpg?raw=true",
+            "Cleanse & Clear": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Cleanse%20&%20clear.jpg?raw=true",
+            "Cranberry Orange": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Cranberry%20orange.jpg?raw=true",
+            "Crimson Berry": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Crimson%20Berry.jpg?raw=true",
+            "Dandelion Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Dandelion%20root.jpg?raw=true",
+            "Elder Leaf": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Elder%20Leaf.jpg?raw=true",
+            "Ginger Peach": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Peach.jpg?raw=true",
+            "Green Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Green%20Tea.jpg?raw=true",
+            "Hawthorne": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hawthome.jpg?raw=true",
+            "Hibiscus": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus.jpg?raw=true",
+            "Lavender": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Lavender.jpg?raw=true",
+            "Hibiscus Zest": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Catnip.jpg",
+            "Burdock": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Burdock.jpg?raw=true",
+            "Catnip": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Catnip.jpg?raw=true",
+            "Cold & Flu Brew": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Jasmine.jpg?raw=true",
+            "Jasmine": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus.jpg?raw=true",
             // You can add more URLs here, like this:
             // "Your Tea Name": "https://link-to-your-image.com/your-image.jpg",
             // ...and so on for all your teas.
