--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ Cranberry Orange,"support immune health,  digestion, and potentially help with u
 Cleanse & Clear,"contains: burdock, dandelion, marshmallow, ginger, licorice,",2 oz,7.5,,0,,,
 Cold & Flu Brew,"energizes the body, comforts the senses",3 oz,5,,0,,,
 Dandelion Root ,"diuretic that detoxes the liver, boosts the immune system, balances",4 oz,6.5,,0,,,
-Elder Leaf,"anti inflammatory, boosts immune system, diuretic, aids in helping with",1 oz,3,,0,,,
+Elder Flower,"anti inflammatory, boosts immune system, diuretic, aids in helping with",1 oz,3,,0,,,
 Ginger Peach," digestion, reduce inflammation, and boost immunity",3 oz,3.5,1,3.5,,,
 Green Tea,"improves blood flow, lowers blood",2 oz,3,,0,,,
 Hawthorne,Boosts immune system,2 oz,4,,0,,,
@@ -379,7 +379,7 @@ Orange Spice Cinnamon,"immune system, improve digestion, and potentially aid in 
 Passion Fruit," stress, anxiety, and insomnia, as well as potential immune system support",2 oz,5,,0,,,
 Rose Petals,"antioxidant properties, digestive support, stress and anxiety reduction, l relief menstrual pain",1 oz,5,,0,,,
 Rooibis,"heart health, digestion, and skin health",3 oz,5.5,,0,,,
-Peppermint leaf: ,"helps with digestive issues, soothes stomach mi",1 oz,4,,0,,,
+Peppermint Leaf: ,"helps with digestive issues, soothes stomach mi",1 oz,4,,0,,,
 Tropical Fruit Tea,"immune system, aid in weight management, and support heart health",3 oz,5,,0,,,
 Triple Berry Tea," antioxidants,  blood sugar and insulin response,  anti-inflammatory and anti-aging effects",2 oz,4,,0,,,
 Winter Blend Tea,"warmth, comfort, and supporting overall well-being ",3 oz,5,,0,,,
@@ -450,7 +450,7 @@ Contact Number,,,,,,,,
             "Cranberry Orange": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Cranberry%20orange.jpg?raw=true",
             "Crimson Berry": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Crimson%20Berry.jpg?raw=true",
             "Dandelion Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Dandelion%20root.jpg?raw=true",
-            "Elder Leaf": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Elder%20Leaf.jpg?raw=true",
+            "Elder Flower": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Elder%20Leaf.jpg?raw=true",
             "Ginger Peach": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Peach.jpg?raw=true",
             "Green Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Green%20Tea.jpg?raw=true",
             "Hawthorne": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hawthome.jpg?raw=true",
@@ -461,6 +461,21 @@ Contact Number,,,,,,,,
             "Catnip": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Catnip.jpg?raw=true",
             "Cold & Flu Brew": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Jasmine.jpg?raw=true",
             "Jasmine": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus.jpg?raw=true",
+            "Spearmint Leaf": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Spearmint%20Leaf.jpg?raw=true",
+            "Tropical Fruit Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Tropical%20Fruit%20Tea.jpg?raw=true",
+            "Winter Blend Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Winter%20Blend%20Tea.jpg?raw=true",
+            "Yerba Mate": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Yerba%20Mate.jpg?raw=true",
+            "Lemon Grass": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Lemon%20Grass.jpg?raw=true",
+            "Licorice Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Licorice%20Root.jpg?raw=true",
+            "Mullein Leaf": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Mullein%20Leaf.jpg?raw=true",
+            "Orange Spice Cinnamon": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Catnip.jpg",
+            "Organic Jasmine": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Burdock.jpg?raw=true",
+            "Passion Fruit": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Passion%20Fruit.jpg?raw=true",
+            "Peppermint Leaf": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Peppermint%20Leaf.jpg?raw=true",
+            "Organic Jasmine": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Organic%20Jasmine.jpg?raw=true",
+            "Rooibis": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Rooibis.jpg?raw=true",
+            "Rose Petals": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Rose%20Petals.jpg?raw=true",
+
             // You can add more URLs here, like this:
             // "Your Tea Name": "https://link-to-your-image.com/your-image.jpg",
             // ...and so on for all your teas.
