--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ Contact Number,,,,,,,,
             "Cranberry Orange": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Cranberry%20orange.jpg?raw=true",
             "Crimson Berry": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Crimson%20Berry.jpg?raw=true",
             "Dandelion Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Dandelion%20root.jpg?raw=true",
-            "Elder Flower": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Elder%20Leaf.jpg?raw=true",
+            "Elder Flower": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Elder%20Flower.jpg",
             "Ginger Peach": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Peach.jpg?raw=true",
             "Green Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Green%20Tea.jpg?raw=true",
             "Hawthorne": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hawthome.jpg?raw=true",
