--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ Jasmine," full of antioxidants, reduces cal",2 oz,5,,0,,,
 Lavender:,"relieves insomnia, indigestion, convulsi",1.5 oz,5,1,5,,,
 Hibiscus Tea,"blood pressure, reduce cholesterol levels, and potentially aid in weight management",1.5 oz,4,,0,,,
 Hibiscus Zest," heart health, weight management, promoting liver health, and blood & blood sugar levels.",2 oz,5,,0,,,
-Hibiscus Mint Tea," digestion, potentially reduce stress, and provide a natural boost to the immune system",2 oz,5.5,,0,,,
+Hibiscus Mint," digestion, potentially reduce stress, and provide a natural boost to the immune system",2 oz,5.5,,0,,,
 Jasmine,"Antioxidant, improve digestion, Blood Pressure, Heart Health",3 oz,5,,0,,,
 Lemon Grass," helps digestion, blood pressure bots Ae ad zt Le",1 oz,3,,0,,,
 Licorice Root,"Strengthens body, use as detox",2 oz ,4,,0,,,
@@ -450,13 +450,13 @@ Contact Number,,,,,,,,
             "Cranberry Orange": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Cranberry%20orange.jpg?raw=true",
             "Crimson Berry": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Crimson%20Berry.jpg?raw=true",
             "Dandelion Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Dandelion%20root.jpg?raw=true",
-            "Elder Flower": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Elder%20Flower.jpg",
+            "Elder Flower": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Elder%20Flower.jpg?raw=true",
             "Ginger Peach": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Peach.jpg?raw=true",
             "Green Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Green%20Tea.jpg?raw=true",
             "Hawthorne": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hawthome.jpg?raw=true",
             "Hibiscus": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus.jpg?raw=true",
             "Lavender": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Lavender.jpg?raw=true",
-            "Hibiscus Zest": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Catnip.jpg",
+            "Hibiscus Zest": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus%20Zest.jpg?raw=true",
             "Burdock": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Burdock.jpg?raw=true",
             "Catnip": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Catnip.jpg?raw=true",
             "Cold & Flu Brew": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Jasmine.jpg?raw=true",
@@ -468,14 +468,14 @@ Contact Number,,,,,,,,
             "Lemon Grass": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Lemon%20Grass.jpg?raw=true",
             "Licorice Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Licorice%20Root.jpg?raw=true",
             "Mullein Leaf": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Mullein%20Leaf.jpg?raw=true",
-            "Orange Spice Cinnamon": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Catnip.jpg",
+            "Orange Spice Cinnamon": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Orange%20Spice%20Cinnamon.jpg?raw=true",
             "Organic Jasmine": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Burdock.jpg?raw=true",
             "Passion Fruit": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Passion%20Fruit.jpg?raw=true",
             "Peppermint Leaf": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Peppermint%20Leaf.jpg?raw=true",
             "Organic Jasmine": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Organic%20Jasmine.jpg?raw=true",
             "Rooibis": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Rooibis.jpg?raw=true",
             "Rose Petals": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Rose%20Petals.jpg?raw=true",
-
+            "Hibiscus Mint": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus%20Mint.jpg?raw=true",
             // You can add more URLs here, like this:
             // "Your Tea Name": "https://link-to-your-image.com/your-image.jpg",
             // ...and so on for all your teas.
