--- a/index.html
+++ b/index.html
@@ -476,6 +476,7 @@ Contact Number,,,,,,,,
             "Rooibis": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Rooibis.jpg?raw=true",
             "Rose Petals": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Rose%20Petals.jpg?raw=true",
             "Hibiscus Mint": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus%20Mint.jpg?raw=true",
+            "Triple Berry": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Triple%20Berry.jpg",
             // You can add more URLs here, like this:
             // "Your Tea Name": "https://link-to-your-image.com/your-image.jpg",
             // ...and so on for all your teas.
