--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ Rose Petals,"antioxidant properties, digestive support, stress and anxiety reduc
 Rooibis,"heart health, digestion, and skin health",3 oz,5.5,,0,,,
 Peppermint Leaf: ,"helps with digestive issues, soothes stomach mi",1 oz,4,,0,,,
 Tropical Fruit Tea,"immune system, aid in weight management, and support heart health",3 oz,5,,0,,,
-Triple Berry Tea," antioxidants,  blood sugar and insulin response,  anti-inflammatory and anti-aging effects",2 oz,4,,0,,,
+Triple Berry," antioxidants,  blood sugar and insulin response,  anti-inflammatory and anti-aging effects",2 oz,4,,0,,,
 Winter Blend Tea,"warmth, comfort, and supporting overall well-being ",3 oz,5,,0,,,
 Spearmint Leaf,Has antimicrobial,1 oz,4,,0,,,
 Yerba Mate,full of antioxidants,2 oz,5,,0,,,
