--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ Contact Number,,,,,,,,
             "Burdock": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Burdock.jpg?raw=true",
             "Catnip": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Catnip.jpg?raw=true",
             "Cold & Flu Brew": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Jasmine.jpg?raw=true",
-            "Jasmine": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus.jpg?raw=true",
+            "Jasmine": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Jasmine.jpg",
             "Spearmint Leaf": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Spearmint%20Leaf.jpg?raw=true",
             "Tropical Fruit Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Tropical%20Fruit%20Tea.jpg?raw=true",
             "Winter Blend Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Winter%20Blend%20Tea.jpg?raw=true",
