--- a/index.html
+++ b/index.html
@@ -474,7 +474,8 @@ Contact Number,,,,,,,,
             "Rose Petals": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Rose%20Petals.jpg?raw=true",
             "Hibiscus Mint": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus%20Mint.jpg?raw=true",
             "Triple Berry Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Triple%20Berry%20Tea.jpg?raw=true",
-            "Chai Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Chai%20Tea.jpg",
+            "Chai Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Chai%20Tea.jpg?raw=true",
+            "Hibiscus Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus%20Tea.jpg?raw=true",
             
             // You can add more URLs here, like this:
             // "Your Tea Name": "https://link-to-your-image.com/your-image.jpg",
