--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ Dandelion Root ,"diuretic that detoxes the liver, boosts the immune system, bala
 Elder Flower,"anti inflammatory, boosts immune system, diuretic, aids in helping with",1 oz,3,,0,,,
 Ginger Peach," digestion, reduce inflammation, and boost immunity",3 oz,3.5,1,3.5,,,
 Green Tea,"improves blood flow, lowers blood",2 oz,3,,0,,,
-Hawthorne,Boosts immune system,2 oz,4,,0,,,
+Hawthorn,Boosts immune system,2 oz,4,,0,,,
 Lavender:,"relieves insomnia, indigestion, convulsi",1.5 oz,5,1,5,,,
 Hibiscus Tea,"blood pressure, reduce cholesterol levels, and potentially aid in weight management",1.5 oz,4,,0,,,
 Hibiscus Zest," heart health, weight management, promoting liver health, and blood & blood sugar levels.",2 oz,5,,0,,,
@@ -453,7 +453,7 @@ Contact Number,,,,,,,,
             "Ginger Peach": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Peach.jpg?raw=true",
             "Green Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Green%20Tea.jpg?raw=true",
             "Ginger Root2": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Root2.jpg?raw=true",
-            "Hawthorne": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Root.jpg?raw=true",
+            "Hawthorn": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hawthorn.jpg?raw=true",
             "Lavender": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Lavender.jpg?raw=true",
             "Hibiscus Zest": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus%20Zest.jpg?raw=true",
             "Burdock": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Burdock.jpg?raw=true",
