--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ Triple Berry Tea," antioxidants,  blood sugar and insulin response,  anti-inflam
 Winter Blend Tea,"warmth, comfort, and supporting overall well-being ",3 oz,5,,0,,,
 Spearmint Leaf,Has antimicrobial,1 oz,4,,0,,,
 Yerba Mate,full of antioxidants,2 oz,5,,0,,,
-Ginger, "Help with nausea, digestion, and inflammation, potentially reducing pain and improving heart health", 4 oz,,,
+Ginger Root, "Help with nausea, digestion, and inflammation, potentially reducing pain and improving heart health", 4 oz,,,
 ,,,,TOTAL QUANTITY,True,,,
 ,,,,MARKUP,3.4000000000000004,,,
 ,,,,SALES TAX,1.02,,,
@@ -478,7 +478,7 @@ Contact Number,,,,,,,,
             "Triple Berry Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Triple%20Berry%20Tea.jpg?raw=true",
             "Chai Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Chai%20Tea.jpg?raw=true",
             "Hibiscus Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus%20Tea.jpg?raw=true",
-            "Ginger": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Root.jpg?raw=true",
+            "Ginger Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Root.jpg?raw=true",
             
             
             // You can add more URLs here, like this:
