--- a/index.html
+++ b/index.html
@@ -361,7 +361,8 @@ Cleanse & Clear,"contains: burdock, dandelion, marshmallow, ginger, licorice,",2
 Cold & Flu Brew,"energizes the body, comforts the senses",3 oz,5,,0,,,
 Dandelion Root ,"diuretic that detoxes the liver, boosts the immune system, balances",4 oz,6.5,,0,,,
 Elder Flower,"anti inflammatory, boosts immune system, diuretic, aids in helping with",1 oz,3,,0,,,
-Ginger Peach," digestion, reduce inflammation, and boost immunity",3 oz,3.5,1,3.5,,,
+Ginger Peach," Digestion, reduce inflammation, and boost immunity",3 oz,3.5,1,3.5,,,
+Ginger Root, "Help with nausea, digestion, and inflammation, potentially reducing pain and improving heart health", 4 oz,,,
 Green Tea,"improves blood flow, lowers blood",2 oz,3,,0,,,
 Hawthorn,Boosts immune system,2 oz,4,,0,,,
 Lavender:,"relieves insomnia, indigestion, convulsi",1.5 oz,5,1,5,,,
@@ -383,7 +384,7 @@ Triple Berry Tea," antioxidants,  blood sugar and insulin response,  anti-inflam
 Winter Blend Tea,"warmth, comfort, and supporting overall well-being ",3 oz,5,,0,,,
 Spearmint Leaf,Has antimicrobial,1 oz,4,,0,,,
 Yerba Mate,full of antioxidants,2 oz,5,,0,,,
-Ginger Root, "Help with nausea, digestion, and inflammation, potentially reducing pain and improving heart health", 4 oz,,,
+
 ,,,,TOTAL QUANTITY,True,,,
 ,,,,MARKUP,3.4000000000000004,,,
 ,,,,SALES TAX,1.02,,,
@@ -478,7 +479,6 @@ Contact Number,,,,,,,,
             "Triple Berry Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Triple%20Berry%20Tea.jpg?raw=true",
             "Chai Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Chai%20Tea.jpg?raw=true",
             "Hibiscus Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus%20Tea.jpg?raw=true",
-            "Ginger Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Root.jpg?raw=true",
             
             
             // You can add more URLs here, like this:
