--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ Cold & Flu Brew,"energizes the body, comforts the senses",3 oz,5,,0,,,
 Dandelion Root ,"diuretic that detoxes the liver, boosts the immune system, balances",4 oz,6.5,,0,,,
 Elder Flower,"anti inflammatory, boosts immune system, diuretic, aids in helping with",1 oz,3,,0,,,
 Ginger Peach," Digestion, reduce inflammation, and boost immunity",3 oz,3.5,1,3.5,,,
-Ginger Root, "Help with nausea, digestion, and inflammation, potentially reducing pain and improving heart health", 4 oz,,,
+Ginger Root, "Help with nausea, digestion, and inflammation, potentially reducing pain and improving heart health", 4 oz
 Green Tea,"improves blood flow, lowers blood",2 oz,3,,0,,,
 Hawthorn,Boosts immune system,2 oz,4,,0,,,
 Lavender:,"relieves insomnia, indigestion, convulsi",1.5 oz,5,1,5,,,
