--- a/index.html
+++ b/index.html
@@ -362,7 +362,6 @@ Cold & Flu Brew,"energizes the body, comforts the senses",3 oz,5,,0,,,
 Dandelion Root ,"diuretic that detoxes the liver, boosts the immune system, balances",4 oz,6.5,,0,,,
 Elder Flower,"anti inflammatory, boosts immune system, diuretic, aids in helping with",1 oz,3,,0,,,
 Ginger Peach," Digestion, reduce inflammation, and boost immunity",3 oz,3.5,1,3.5,,,
-Ginger Root, "Help with nausea, digestion, and inflammation, potentially reducing pain and improving heart health", 4 oz
 Green Tea,"improves blood flow, lowers blood",2 oz,3,,0,,,
 Hawthorn,Boosts immune system,2 oz,4,,0,,,
 Lavender:,"relieves insomnia, indigestion, convulsi",1.5 oz,5,1,5,,,
@@ -384,6 +383,7 @@ Triple Berry Tea," antioxidants,  blood sugar and insulin response,  anti-inflam
 Winter Blend Tea,"warmth, comfort, and supporting overall well-being ",3 oz,5,,0,,,
 Spearmint Leaf,Has antimicrobial,1 oz,4,,0,,,
 Yerba Mate,full of antioxidants,2 oz,5,,0,,,
+Ginger,"Help with nausea, digestion, and inflammation, potentially reducing pain and improving heart health", 4 oz
 
 ,,,,TOTAL QUANTITY,True,,,
 ,,,,MARKUP,3.4000000000000004,,,
@@ -452,8 +452,8 @@ Contact Number,,,,,,,,
             "Dandelion Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Dandelion%20root.jpg?raw=true",
             "Elder Flower": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Elder%20Flower.jpg?raw=true",
             "Ginger Peach": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Peach.jpg?raw=true",
+            "Ginger": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Peach.jpg?raw=true",
             "Green Tea": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Green%20Tea.jpg?raw=true",
-            "Ginger Root": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Ginger%20Root.jpg?raw=true",
             "Hawthorn": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hawthorn.jpg?raw=true",
             "Lavender": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Lavender.jpg?raw=true",
             "Hibiscus Zest": "https://github.com/ZandDRadiantRoots/znd-radiant-roots/blob/main/Tea%20Images/Hibiscus%20Zest.jpg?raw=true",
